# bazel-go-rules-darwin-issue

./: BUILD.bazel  Gopkg.toml  bazel-bazel-go-rules-darwin-issue  main.go
