load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/sbueringer/test

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/sbueringer/bazel-go-rules-darwin-issue",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sbueringer/bazel-go-rules-darwin-issue",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/hashicorp/go-rootcerts:go_default_library"],
)

go_binary(
    name = "bazel-go-rules-darwin-issue",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
